force-app/main/default/objects/Filing__c/fields/Dateofapp__c.field-meta.xml
<CustomField>
    <fullName>Dateofapp__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Date of app</label>
    <type>Date</type>
</CustomField>