force-app/main/default/objects/Filing__c/fields/DateofBDRegistration__c.field-meta.xml
<CustomField>
    <fullName>DateofBDRegistration__c</fullName>
    <description>PacPoint-RA011319-BREG Phase 1</description>
    <label>Date of BD Registration</label>
    <type>Date</type>
</CustomField>