force-app/main/default/objects/Filing__c/fields/Dateoffirstsaleifany__c.field-meta.xml
<CustomField>
    <fullName>Dateoffirstsaleifany__c</fullName>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <label>Date of first sale (if any)</label>
    <type>Date</type>
</CustomField>