force-app/main/default/objects/Filing__c/fields/DateofIANoticeFiling__c.field-meta.xml
<CustomField>
    <fullName>DateofIANoticeFiling__c</fullName>
    <description>PacPoint - RA012319 - BREG Phase 1</description>
    <label>Date of IA Notice Filing</label>
    <type>Date</type>
</CustomField>