force-app/main/default/objects/Filing__c/fields/DateofIARegistration__c.field-meta.xml
<CustomField>
    <fullName>DateofIARegistration__c</fullName>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <label>Date of IA Registration</label>
    <type>Date</type>
</CustomField>