force-app/main/default/objects/Filing__c/fields/DateOfIncorporation__c.field-meta.xml
<CustomField>
    <fullName>DateOfIncorporation__c</fullName>
    <description>PacPoint-AC081820 - Case# 6460 - Created for DCCA BREG SEC/SEB Support Year 2 - Creating to capture Date of Incorporation directly on the Filing Object</description>
    <label>Date of Incorporation</label>
    <type>Date</type>
</CustomField>