force-app/main/default/objects/Filing__c/fields/DateofNoticeFiling__c.field-meta.xml
<CustomField>
    <fullName>DateofNoticeFiling__c</fullName>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <label>Date of Notice Filing</label>
    <type>Date</type>
</CustomField>