force-app/main/default/objects/Filing__c/fields/DiscretionNoCustody__c.field-meta.xml
<CustomField>
    <fullName>DiscretionNoCustody__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Discretion, but no custody - Maintain $10k Net Worth at all times.16-39-433(c)</inlineHelpText>
    <label>Discretion - No Custody</label>
    <type>Checkbox</type>
</CustomField>