force-app/main/default/objects/Filing__c/fields/DoesNotMeetNWRequirement__c.field-meta.xml
<CustomField>
    <fullName>DoesNotMeetNWRequirement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Does not meet additional net worth requirement.</inlineHelpText>
    <label>Does Not Meet NW Requirement</label>
    <type>Checkbox</type>
</CustomField>