force-app/main/default/objects/Filing__c/fields/EFDID__c.field-meta.xml
<CustomField>
    <fullName>EFDID__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <label>EFDID</label>
    <type>Checkbox</type>
</CustomField>