force-app/main/default/objects/Filing__c/fields/EFDIDFormula__c.field-meta.xml
<CustomField>
    <fullName>EFDIDFormula__c</fullName>
    <formula>Account__r.EFDID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EFDID</label>
    <type>Text</type>
</CustomField>