force-app/main/default/objects/Filing__c/fields/EFDIDNumber__c.field-meta.xml
<CustomField>
    <fullName>EFDIDNumber__c</fullName>
    <description>PacPoint-IC121918 - Created for BREG phase 1</description>
    <label>EFDID#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>