force-app/main/default/objects/Filing__c/fields/EffectiveDate__c.field-meta.xml
<CustomField>
    <fullName>EffectiveDate__c</fullName>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>