force-app/main/default/objects/Filing__c/fields/ExamComments__c.field-meta.xml
<CustomField>
    <fullName>ExamComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Comments on Exam Requirements for Sole Proprietor.</inlineHelpText>
    <label>Exam Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>