force-app/main/default/objects/Filing__c/fields/Exemptfrombondingrequirements__c.field-meta.xml
<CustomField>
    <fullName>Exemptfrombondingrequirements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Principal place of business in other state - shll be exempt from bonding requirements. If IA is registered as an IA in the stte w/ principal place of business. 16-39-434(c)</inlineHelpText>
    <label>Exempt from bonding requirements</label>
    <type>Checkbox</type>
</CustomField>