force-app/main/default/objects/Filing__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <description>PacPoint-IC101118 - Created for BREG phase 1</description>
    <label>Expiry Date</label>
    <type>Date</type>
</CustomField>