force-app/main/default/objects/Filing__c/fields/FDD__c.field-meta.xml
<CustomField>
    <fullName>FDD__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>FDD</label>
    <type>Checkbox</type>
</CustomField>