force-app/main/default/objects/Filing__c/fields/FDDComments__c.field-meta.xml
<CustomField>
    <fullName>FDDComments__c</fullName>
    <description>PacPoint-PH032219 - Created for BREG phase 1. Created for Filings Checklist Updates</description>
    <label>FDD Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>