force-app/main/default/objects/Filing__c/fields/FederalCovered__c.field-meta.xml
<CustomField>
    <fullName>FederalCovered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-RA012319-BREG Phase 1</description>
    <label>Federal Covered</label>
    <type>Checkbox</type>
</CustomField>