force-app/main/default/objects/Filing__c/fields/FilerAccount__c.field-meta.xml
<CustomField>
    <fullName>FilerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV122818 - Created for BREG phase 1</description>
    <label>Filer-Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.SEBSEC__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Filings (Filer-Account)</relationshipLabel>
    <relationshipName>FilingsFilerAccount</relationshipName>
    <type>Lookup</type>
</CustomField>