force-app/main/default/objects/Filing__c/fields/FilerContact__c.field-meta.xml
<CustomField>
    <fullName>FilerContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-IC100918 - Created for BREG phase 1</description>
    <label>Filer-Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Filings (Filer-Contact)</relationshipLabel>
    <relationshipName>FilingsFilerContact</relationshipName>
    <type>Lookup</type>
</CustomField>