force-app/main/default/objects/Filing__c/fields/Filing_Created_After_CLM_Launch_Date__c.field-meta.xml
<CustomField>
    <fullName>Filing_Created_After_CLM_Launch_Date__c</fullName>
    <formula>DATEVALUE(CreatedDate)  &gt;=  DATEVALUE(&apos;2023-03-03&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filing Created After SEC CLM Launch Date</label>
    <type>Checkbox</type>
</CustomField>