force-app/main/default/objects/Filing__c/fields/Filing_Received_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Filing_Received_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-YH-121522</description>
    <label>Filing Received Email Sent</label>
    <type>Checkbox</type>
</CustomField>