force-app/main/default/objects/Filing__c/fields/FilingCompletedDate__c.field-meta.xml
<CustomField>
    <fullName>FilingCompletedDate__c</fullName>
    <label>Filing Completed Date</label>
    <type>DateTime</type>
</CustomField>