force-app/main/default/objects/Filing__c/fields/FilingDate__c.field-meta.xml
<CustomField>
    <fullName>FilingDate__c</fullName>
    <description>PacPoint-RA0101218 - Created for BREG phase 1</description>
    <label>Filing Date</label>
    <type>Date</type>
</CustomField>