force-app/main/default/objects/Filing__c/fields/FilingDeficienciesInstructions__c.field-meta.xml
<CustomField>
    <fullName>FilingDeficienciesInstructions__c</fullName>
    <defaultValue>&quot;Have you uploaded all of the necessary files? If you have more files to upload. Click on the &apos;Close&apos; button and upload the necessary files. If you have uploaded all of the necessary files, click on the &apos;Submit for Review?&apos; checkbox and the &apos;Save&apos; button to submit your deficiency corrections.&quot;</defaultValue>
    <description>PacPoint-MV012219 - Created for BREG phase 1</description>
    <label>Filing Deficiencies Instructions</label>
    <length>12126</length>
    <type>LongTextArea</type>
</CustomField>