force-app/main/default/objects/Filing__c/fields/FilingEndDate__c.field-meta.xml
<CustomField>
    <fullName>FilingEndDate__c</fullName>
    <formula>IF
(
ISBLANK(DATEVALUE(FilingCompletedDate__c)) , 
(
IF
(
ISBLANK( WithdrawalDate__c ) , 


 (IF
(
 
OR(
TEXT(Status__c) = &quot;Filing Withdrawn&quot;,
TEXT(Status__c) = &quot;Filing Completed&quot;
)


, 



 StatusDate__c , 

TODAY()

) ),

WithdrawalDate__c
)
)
, 
DATEVALUE(FilingCompletedDate__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filing End Date</label>
    <type>Date</type>
</CustomField>