force-app/main/default/objects/Filing__c/fields/FilingFeeApprovalConfirmation__c.field-meta.xml
<CustomField>
    <fullName>FilingFeeApprovalConfirmation__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Filing Fee Approval Confirmation</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FINRA</fullName>
            </value>
            <value>
                <fullName>Home State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>