force-app/main/default/objects/Filing__c/fields/FilingFeeComments__c.field-meta.xml
<CustomField>
    <fullName>FilingFeeComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Was the filing fee submitted on IARD system? Note the application filing date, date received, fiscal year end, state of formation.</inlineHelpText>
    <label>Filing Fee Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>