force-app/main/default/objects/Filing__c/fields/FilingFeeCRDHI__c.field-meta.xml
<CustomField>
    <fullName>FilingFeeCRDHI__c</fullName>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Filing Fee CRD/HI?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid to CRD</fullName>
            </value>
            <value>
                <fullName>Paid to Hawaii</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>