force-app/main/default/objects/Filing__c/fields/FilingFeePaid__c.field-meta.xml
<CustomField>
    <fullName>FilingFeePaid__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <label>Filing Fee Paid?</label>
    <type>Checkbox</type>
</CustomField>