force-app/main/default/objects/Filing__c/fields/FilingReviewComments__c.field-meta.xml
<CustomField>
    <fullName>FilingReviewComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Filing Review - Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>