force-app/main/default/objects/Filing__c/fields/FilingTypeOther__c.field-meta.xml
<CustomField>
    <fullName>FilingTypeOther__c</fullName>
    <description>PacPoint-IC100818 - Created for BREG phase 1</description>
    <label>Filing Type Other</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>