force-app/main/default/objects/Filing__c/fields/FinancialRequirementsComments__c.field-meta.xml
<CustomField>
    <fullName>FinancialRequirementsComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Financial Requirements Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>