force-app/main/default/objects/Filing__c/fields/FinancialsLastMonthUnAudited__c.field-meta.xml
<CustomField>
    <fullName>FinancialsLastMonthUnAudited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Financial statements from the month ended no earlier than 30 days preceding the date of application</inlineHelpText>
    <label>Financials Last Month Aunaudited?</label>
    <type>Checkbox</type>
</CustomField>