force-app/main/default/objects/Filing__c/fields/FinancialStatements__c.field-meta.xml
<CustomField>
    <fullName>FinancialStatements__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC102418 - Created for BREG phase 1</description>
    <label>Financial Statements</label>
    <type>Checkbox</type>
</CustomField>