force-app/main/default/objects/Filing__c/fields/FinancialStatementsfromthemonth__c.field-meta.xml
<CustomField>
    <fullName>FinancialStatementsfromthemonth__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <inlineHelpText>Financial statements from the month ended no earlier than 30 days preceding the date of application.</inlineHelpText>
    <label>Financial Statements from the month</label>
    <type>Checkbox</type>
</CustomField>