force-app/main/default/objects/Filing__c/fields/FinancialsYearEnd5K__c.field-meta.xml
<CustomField>
    <fullName>FinancialsYearEnd5K__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Required net capital of $5,000</inlineHelpText>
    <label>Financials Year End $5K?</label>
    <type>Checkbox</type>
</CustomField>