force-app/main/default/objects/Filing__c/fields/FinancialsYearEndAudited__c.field-meta.xml
<CustomField>
    <fullName>FinancialsYearEndAudited__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Audited yearend statements from the most recent fiscal year</inlineHelpText>
    <label>Financials Year End Audited?</label>
    <type>Checkbox</type>
</CustomField>