force-app/main/default/objects/Filing__c/fields/FINRAlisted__c.field-meta.xml
<CustomField>
    <fullName>FINRAlisted__c</fullName>
    <description>PacPoint - RA122618 - BREG Phase 1</description>
    <inlineHelpText>Is FINRA listed with current registering firm in APPROVED status</inlineHelpText>
    <label>FINRA listed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>