force-app/main/default/objects/Filing__c/fields/FINRAlistedComments__c.field-meta.xml
<CustomField>
    <fullName>FINRAlistedComments__c</fullName>
    <description>PacPoint - RA122618 - BREG Phase 1</description>
    <label>FINRA listed - Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>