force-app/main/default/objects/Filing__c/fields/FirmCRD__c.field-meta.xml
<CustomField>
    <fullName>FirmCRD__c</fullName>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <label>Firm CRD</label>
    <type>TextArea</type>
</CustomField>