force-app/main/default/objects/Filing__c/fields/FiscalYearEnd__c.field-meta.xml
<CustomField>
    <fullName>FiscalYearEnd__c</fullName>
    <description>PacPoint-IC101118 - Created for BREG phase 1</description>
    <label>Fiscal Year End</label>
    <type>Date</type>
</CustomField>