force-app/main/default/objects/Filing__c/fields/FlagToSkipValidation__c.field-meta.xml
<CustomField>
    <fullName>FlagToSkipValidation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to skip the validation</description>
    <label>Flag To Skip Validation</label>
    <type>Checkbox</type>
</CustomField>