force-app/main/default/objects/Filing__c/fields/FormDMAIUniformNotice__c.field-meta.xml
<CustomField>
    <fullName>FormDMAIUniformNotice__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Form D/ Model Accredited Investor (MAI) Uniform Notice of Transaction.</inlineHelpText>
    <label>Form D/ MAI Uniform Notice</label>
    <type>Checkbox</type>
</CustomField>