force-app/main/default/objects/Filing__c/fields/FormDMAIUniformNoticeComments__c.field-meta.xml
<CustomField>
    <fullName>FormDMAIUniformNoticeComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Form D/MAI Uniform Notice Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>