force-app/main/default/objects/Filing__c/fields/FormerNameNameofFund__c.field-meta.xml
<CustomField>
    <fullName>FormerNameNameofFund__c</fullName>
    <description>PacPoint-IC071719 - Created for BREG phase 1</description>
    <label>Former Name - Name of Fund</label>
    <length>255</length>
    <type>Text</type>
</CustomField>