force-app/main/default/objects/Filing__c/fields/FormerNamePortfolioName__c.field-meta.xml
<CustomField>
    <fullName>FormerNamePortfolioName__c</fullName>
    <description>PacPoint-IC071719 - Created for BREG phase 1</description>
    <label>Former Name - Portfolio Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>