force-app/main/default/objects/Filing__c/fields/FranchiseSellerDisclosure__c.field-meta.xml
<CustomField>
    <fullName>FranchiseSellerDisclosure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC0100518 - Created for BREG phase 1</description>
    <inlineHelpText>Franchise Seller Disclosure Form (Form D)</inlineHelpText>
    <label>Seller Disclosure</label>
    <type>Checkbox</type>
</CustomField>