force-app/main/default/objects/Filing__c/fields/FSAccordancewithUSGAAP__c.field-meta.xml
<CustomField>
    <fullName>FSAccordancewithUSGAAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Audted FS have an unqualified audit opinion to ensure preparation in accordance with US GAAP.</inlineHelpText>
    <label>FS Accordance with US GAAP</label>
    <type>Checkbox</type>
</CustomField>