force-app/main/default/objects/Filing__c/fields/FSRequirementsComments__c.field-meta.xml
<CustomField>
    <fullName>FSRequirementsComments__c</fullName>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Financial Statement (FS) Requirements Comments.</inlineHelpText>
    <label>FS Requirements Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>