force-app/main/default/objects/Filing__c/fields/FSwithin90days__c.field-meta.xml
<CustomField>
    <fullName>FSwithin90days__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Financial statements as of a date within 90 days of the d date included in the FDD.</inlineHelpText>
    <label>FS within 90 days</label>
    <type>Checkbox</type>
</CustomField>