force-app/main/default/objects/Filing__c/fields/GuarantyofPerformance__c.field-meta.xml
<CustomField>
    <fullName>GuarantyofPerformance__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC100518 - Created for BREG phase 1</description>
    <inlineHelpText>Guaranty of Performance (Form E) (If audited financial statements of an Affiliate are substituted for those of the franchisor&apos;s)</inlineHelpText>
    <label>Guaranty of Performance</label>
    <type>Checkbox</type>
</CustomField>