force-app/main/default/objects/Filing__c/fields/HIApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>HIApprovalDate__c</fullName>
    <description>PacPoint-MV042619 - Created for BREG phase 1</description>
    <label>HI Approval Date</label>
    <type>Date</type>
</CustomField>