force-app/main/default/objects/Filing__c/fields/HomeStateisHawaii__c.field-meta.xml
<CustomField>
    <fullName>HomeStateisHawaii__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Home state is Hawaii.</inlineHelpText>
    <label>Home State is Hawaii</label>
    <type>Checkbox</type>
</CustomField>