force-app/main/default/objects/Filing__c/fields/HomeStateIsNotHawaii__c.field-meta.xml
<CustomField>
    <fullName>HomeStateIsNotHawaii__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <label>Home State Is Not Hawaii</label>
    <type>Checkbox</type>
</CustomField>