force-app/main/default/objects/Filing__c/fields/IAincompliancewithhomestateNWNC__c.field-meta.xml
<CustomField>
    <fullName>IAincompliancewithhomestateNWNC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <inlineHelpText>IA is in compliance with its home state&apos;s net worth (NW) or net capital (NC) requirements, if any.</inlineHelpText>
    <label>IA in compliance with home state NW/NC</label>
    <type>Checkbox</type>
</CustomField>