force-app/main/default/objects/Filing__c/fields/IARD__c.field-meta.xml
<CustomField>
    <fullName>IARD__c</fullName>
    <description>PacPoint-IC100818 - Created for BREG phase 1</description>
    <externalId>true</externalId>
    <label>IARD#</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>