force-app/main/default/objects/Filing__c/fields/IAsDisclosureDocument__c.field-meta.xml
<CustomField>
    <fullName>IAsDisclosureDocument__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Client must receive IA&apos;s disclosure document at least 48 hours prior to entering into the contract or allowed to terminate the contract without penalty within 5 business days of entering into the contract.</inlineHelpText>
    <label>IA&apos;s Disclosure Document</label>
    <type>Checkbox</type>
</CustomField>