force-app/main/default/objects/Filing__c/fields/IAsmostrecentfinancial_statement__c.field-meta.xml
<CustomField>
    <fullName>IAsmostrecentfinancial_statement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <inlineHelpText>Provide a copy of the advisor&apos;s most recent financial statement filed with the state where the adviser maintains its principal place of business. 16-39-435(b)(3)(B).</inlineHelpText>
    <label>IA&apos;s most recent financial statement</label>
    <type>Checkbox</type>
</CustomField>