force-app/main/default/objects/Filing__c/fields/Ifnotpendingprovidestatus__c.field-meta.xml
<CustomField>
    <fullName>Ifnotpendingprovidestatus__c</fullName>
    <description>PacPoint - RA122618 - BREG Phase 1</description>
    <inlineHelpText>If complaint is not pending, provide status</inlineHelpText>
    <label>If not pending, provide status.</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Closed/No Action</fullName>
            </value>
            <value>
                <fullName>Settled</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>