force-app/main/default/objects/Filing__c/fields/Imauthorizedtosubmitthisfiling__c.field-meta.xml
<CustomField>
    <fullName>Imauthorizedtosubmitthisfiling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-MV052719 - Created for BREG phase 1. To be used in communities.</description>
    <inlineHelpText>By clicking on the check box, you are validating that you are a legally authorized to submit a filing on behalf on a company or an individual.</inlineHelpText>
    <label>I&apos;m authorized to submit this filing</label>
    <type>Checkbox</type>
</CustomField>