force-app/main/default/objects/Filing__c/fields/InCompliancewithNW__c.field-meta.xml
<CustomField>
    <fullName>InCompliancewithNW__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>IA is in compliance w/ its home state&apos;s net worth or net capital requirements, if any.</inlineHelpText>
    <label>In Compliance with NW</label>
    <type>Checkbox</type>
</CustomField>