force-app/main/default/objects/Filing__c/fields/IntegrationClause__c.field-meta.xml
<CustomField>
    <fullName>IntegrationClause__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC100518 - Created for BREG phase 1</description>
    <inlineHelpText>Integration Clause Item 17(t) of the FDD. Is the franchise agreement integration section correctly referenced in 17(t)? Does Item 17(t) summary include a reference to the carve-out provision in agreement?</inlineHelpText>
    <label>Integration Clause</label>
    <type>Checkbox</type>
</CustomField>