force-app/main/default/objects/Filing__c/fields/Internal_Review_or_Termination__c.field-meta.xml
<CustomField>
    <fullName>Internal_Review_or_Termination__c</fullName>
    <description>PacPoint - RA122618 - BREG Phase 1</description>
    <inlineHelpText>Any Internal Review or Termination</inlineHelpText>
    <label>Internal Review or Termination?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>