force-app/main/default/objects/Filing__c/fields/IrrevocableConsent__c.field-meta.xml
<CustomField>
    <fullName>IrrevocableConsent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-IC111318 - Created for BREG phase 1</description>
    <inlineHelpText>Irrevocable Consent to Service of Process and Corporate Resolution (Section 485-12, Hawaii Revised Statutes)</inlineHelpText>
    <label>Irrevocable Consent</label>
    <type>Checkbox</type>
</CustomField>