force-app/main/default/objects/Filing__c/fields/IrrevocableConsentComments__c.field-meta.xml
<CustomField>
    <fullName>IrrevocableConsentComments__c</fullName>
    <description>PacPoint-RA111318-BREG Phase 1</description>
    <label>Irrevocable Consent Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>