force-app/main/default/objects/Filing__c/fields/IsAgentRepFiling__c.field-meta.xml
<CustomField>
    <fullName>IsAgentRepFiling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PacPoint-JB121518 - Created for BREG Phase 1</description>
    <label>IsAgentRepFiling</label>
    <type>Checkbox</type>
</CustomField>