force-app/main/default/objects/Filing__c/fields/Isexamokay__c.field-meta.xml
<CustomField>
    <fullName>Isexamokay__c</fullName>
    <description>PacPoint - RA122618 - BREG Phase 1</description>
    <label>Is exam okay?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Passed within last 2 years</fullName>
            </value>
            <value>
                <fullName>If not, currently registered with other states</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>